--- a/swatch/bootswatch.less
+++ b/swatch/bootswatch.less
@@ -34,7 +34,7 @@ blink {
 // SCAFFOLDING
 // -----------------------------------------------------
 body {
-  background: @bodyBackground url('../img/furbyANIMADO.gif') top left;
+  background: @bodyBackground url('../img/microfab.gif') top left;
   -webkit-font-smoothing: none;
 }
 
