--- a/swatch/bootstrap.css
+++ b/swatch/bootstrap.css
@@ -3281,7 +3281,7 @@ button.close {
 }
 
 .btn-large {
-  padding: 11px 19px;
+  padding: 0 0;
   font-size: 20px;
   -webkit-border-radius: none;
      -moz-border-radius: none;
@@ -6206,7 +6206,7 @@ blink {
 
 body {
   -webkit-font-smoothing: none;
-  background: #0000ff url('../img/microfab.gif') top left;
+  background: #0000ff url('../img/bg3.gif') top left;
 }
 
 .navbar {
@@ -6217,7 +6217,7 @@ body {
 }
 
 .navbar-inner {
-  background: #000000 url('../img/stars.gif') top left;
+  background: #000000 url('../img/marble1.jpg') top left;
   border-bottom: 1px solid #D4D0C8;
 }
 
