--- a/swatch/bootswatch.less
+++ b/swatch/bootswatch.less
@@ -68,7 +68,7 @@ body {
 // -----------------------------------------------------
 legend {
   font-weight: bold;
-  color: yellow;
+  color: #8be9fd;
 }
 .control-group.error input {
   background: #000 url('../img/flames.gif') 0 -30px repeat-x;
@@ -94,13 +94,13 @@ legend {
 
 .label-warning,
 .badge-warning {
-  background-color: yellow;
+  background-color: #8be9fd;
   color: black;
 }
 
 .label-warning[href],
 .badge-warning[href] {
-  background-color: yellow;
+  background-color: #8be9fd;
   color: black;
 }
 
