--- a/swatch/variables.less
+++ b/swatch/variables.less
@@ -22,9 +22,9 @@
 // -------------------------
 @blue:                  #0000ff;
 @blueDark:              #000099;
-@green:                 #00ff00;
+@green:                 #bd93f9;
 @red:                   #ff0000;
-@yellow:                #ffff00;
+@yellow:                #8be9fd;
 @orange:                #ffaa00;
 @pink:                  #ff00ff;
 @purple:                #aa00ff;
@@ -94,7 +94,7 @@
 @btnInfoBackground:                 #00ffff;
 @btnInfoBackgroundHighlight:        @btnInfoBackground;
 
-@btnSuccessBackground:              #00ff00;
+@btnSuccessBackground:              #bd93f9;
 @btnSuccessBackgroundHighlight:     @btnSuccessBackground;
 
 @btnWarningBackground:              @orange;
@@ -110,7 +110,7 @@
 // Forms
 // -------------------------
 @inputBackground:               black;
-@inputBorder:                   #00ff00;
+@inputBorder:                   #bd93f9;
 @inputBorderRadius:             0;
 @inputDisabledBackground:       #cccccc;
 @formActionsBackground:         blue;
@@ -186,7 +186,7 @@
 @navbarBorder:                    darken(@navbarBackground, 12%);
 
 @navbarText:                      #ff00ff;
-@navbarLinkColor:                 #00ff00;
+@navbarLinkColor:                 #bd93f9;
 @navbarLinkColorHover:            @grayDark;
 @navbarLinkColorActive:           @gray;
 @navbarLinkBackgroundHover:       transparent;
@@ -231,7 +231,7 @@
 // Form states and alerts
 // -------------------------
 @warningText:             black;
-@warningBackground:       yellow;
+@warningBackground:       #8be9fd;
 @warningBorder:           red;
 
 @errorText:               white;
@@ -240,7 +240,7 @@
 
 @successText:             white;
 @successBackground:       green;
-@successBorder:           #00aa00;
+@successBorder:           #bd93f9;
 
 @infoText:                black;
 @infoBackground:          #00ffff;
