--- a/bootstrap/less/variables.less
+++ b/bootstrap/less/variables.less
@@ -24,7 +24,7 @@
 @blueDark:              #0064cd;
 @green:                 #46a546;
 @red:                   #9d261d;
-@yellow:                #ffc40d;
+@yellow:                #8be9fd;
 @orange:                #f89406;
 @pink:                  #c3325f;
 @purple:                #7a43b6;
