--- a/swatch/bootstrap.css
+++ b/swatch/bootstrap.css
@@ -6206,7 +6206,7 @@ blink {
 
 body {
   -webkit-font-smoothing: none;
-  background: #0000ff url('../img/bg3.gif') top left;
+  background: #0000ff url('../img/arcade1c.gif') top left;
 }
 
 .navbar {
