--- a/swatch/bootstrap.css
+++ b/swatch/bootstrap.css
@@ -7,6 +7,10 @@
  *
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
  */
+ @font-face {
+  font-family: 'Comic Sans MS';
+  src: url("comic-sans-ms/comici.ttf");
+}
 
 .clearfix {
   *zoom: 1;
