--- a/swatch/bootstrap.css
+++ b/swatch/bootstrap.css
@@ -9,7 +9,7 @@
  */
  @font-face {
   font-family: 'Comic Sans MS';
-  src: url("comic-sans-ms/comici.ttf");
+  src: url("img/comici.ttf");
 }
 
 .clearfix {
@@ -228,7 +228,7 @@ textarea {
 body {
   margin: 0;
   font-family: "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardSE-Regular", "Marker Felt", "Purisa", "URW Chancery L", cursive, sans-serif;
-  src: url("comic-sans-ms/comici.ttf");
+  src: url("img/comici.ttf");
   font-size: 16px;
   line-height: 20px;
   color: #8be9fd;
@@ -1071,7 +1071,7 @@ button,
 select,
 textarea {
   font-family: "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardSE-Regular", "Marker Felt", "Purisa", "URW Chancery L", cursive, sans-serif;
-  src: url("comic-sans-ms/comici.ttf");
+  src: url("img/comici.ttf");
 }
 
 label {
@@ -4517,7 +4517,7 @@ input[type="submit"].btn.btn-mini {
   padding: 4px 14px;
   margin-bottom: 0;
   font-family: "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardSE-Regular", "Marker Felt", "Purisa", "URW Chancery L", cursive, sans-serif;
-  src: url("comic-sans-ms/comici.ttf");
+  src: url("img/comici.ttf");
   font-size: 13px;
   font-weight: normal;
   line-height: 1;
