--- a/swatch/bootstrap.css
+++ b/swatch/bootstrap.css
@@ -8,7 +8,7 @@
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
  */
  @font-face {
-  font-family: 'Comic Sans MS';
+  font-family: "Comic Sans MS";
   src: url("img/comici.ttf");
 }
 
