--- a/swatch/bootstrap.css
+++ b/swatch/bootstrap.css
@@ -7,7 +7,7 @@
  *
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
  */
- @font-face {
+@font-face {
   font-family: "Comic Sans MS";
   src: url("img/comici.ttf");
 }
@@ -73,6 +73,8 @@ html {
   font-size: 100%;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
+  cursor: url('http://i.imgur.com/jOlDCH6.png'), pointer;
+  cursor: url('http://i.imgur.com/5tlptn8.png'), none;
 }
 
 a:focus {
